Add ngrx store, add auth actions, update routing.

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -14,6 +14,11 @@
     "estimation": "Estimation",
     "team": "Team"
   },
+  "auth": {
+    "login": "Login",
+    "password": "Password",
+    "sign_in": "Sign In"
+  },
   "team": {
     "teams": "Teams",
     "create_team": "Create team",
