--- a/client/src/assets/i18n/ua.json
+++ b/client/src/assets/i18n/ua.json
@@ -14,6 +14,11 @@
     "estimation": "Підрахунок",
     "team": "Команда"
   },
+  "auth": {
+    "login": "Логін",
+    "password": "Пароль",
+    "sign_in": "Вхід"
+  },
   "team": {
     "teams": "Команди",
     "create_team": "Створити команду",
