Implement Create and Update team functionality, add store functionality.

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
     "save": "Save",
     "back": "Back",
     "create": "Create",
+    "update": "Update",
     "add_members": "Add members",
     "create_team": "Create team"
   },
