--- a/client/src/assets/i18n/ua.json
+++ b/client/src/assets/i18n/ua.json
@@ -5,6 +5,7 @@
     "save": "Зберегти",
     "back": "Назад",
     "create": "Створити",
+    "update": "Редагувати",
     "add_members": "Додати члена",
     "create_team": "Створити команду"
   },
